--- a/anemone_coffee/src/i18n/en.json
+++ b/anemone_coffee/src/i18n/en.json
@@ -25,12 +25,12 @@
         },
         "sectionDiscover": {
             "title":"What to expect at Anemone Café?",
-            "text": "Pick up your breakfast before work. Be able to come drink coffee or eat at any time of the day. Enjoy good specialty coffee and discover new drinks.\n\nEnjoy the time to taste with our homemade pastries. Attend regular events. Meet at the aperitif time and enjoy our tapas to share. Have a drink with friends. Anemone is finally a pleasant and friendly coffee shop in the suburbs that is committed to recreating the link between us. That's why we moved to the city center, we're counting on you to visit.",
+            "text": "Pick up your breakfast before work. Be able to come drink coffee or eat at any time of the day. Enjoy good specialty coffee and discover new drinks.\n\nEnjoy the time to taste with our homemade pastries. Attend regular events. Meet at the aperitif time and enjoy our tapas to share. ",
             "buttonValues":"Our values"
         },
         "sectionCoffeeShop_Patisseries": {
             "title":"Coffee Shop & pastries",
-            "text":"Our coffee shop is minimalist yet unique, a place where everyone can find their place. We offer carefully selected specialty coffees roasted in the Val d'Oise. You'll also find all kinds of hot drinks, cold beverages and seasonal juices. Every morning we prepare fresh pastries for you to enjoy throughout the day. And if you don't have time to sit down, don't forget that everything is available to take away",
+            "text":"Our coffee shop is minimalist yet unique, a place where everyone can find their place. We offer carefully selected specialty coffees roasted in the Val d'Oise. You'll also find all kinds of hot drinks, cold beverages and seasonal juices. ",
             "buttonBoisson":"Our drinks"
         },
         "sectionBrunch": {
@@ -40,7 +40,7 @@
         },
         "sectionTapas" : {
             "title":"Dishes to share in the form of tapas",
-            "text":"Sharing is at the heart of our work at Anémone Café, and it's also what we want to convey through our cuisine. That's why every evening we offer our dishes as tapas to share. Accompanied by a glass of good wine, all the ingredients are brought together for a great evening. Beautiful combinations that sublimate quality products, that's our watchword.",
+            "text":"Sharing is at the heart of our work at Anémone Café, and it's also what we want to convey through our cuisine. That's why every evening we offer our dishes as tapas to share. Accompanied by a glass of good wine, all the ingredients are brought together for a great evening. ",
             "buttonTapas":"Our tapas"
         },
         "sectionReseaux": {
@@ -52,7 +52,7 @@
     "values":{
         "sectionPartenariats": {
             "title":"our partnerships",
-            "text":"Our partnerships with local producers: It would be a shame to have quality products at hand and not take advantage of them! That's why Anémone Café has decided to partner with local producers to guarantee you the best on your plate, and to promote short supply chains wherever possible. In the interests of transparency and appreciation of their work, we feel it's important to present them to you below:-The coffee: -The cheese: -The eggs: -The charcuterie"
+            "text":"Our partnerships with local producers: It would be a shame to have quality products at hand and not take advantage of them! That's why Anémone Café has decided to partner with local producers to guarantee you the best on your plate, and to promote short supply chains wherever possible. "
         },
         "sectionDechets": {
             "title":"Waste recovery",
@@ -67,9 +67,9 @@
 
     "menu": {
         "titleBrunch": "Our Brunch",
-        "textBrunch": "For breakfast, we offer a variety of high-quality hot drinks, as well as freshly squeezed seasonal juices. Also available are our cakes and other pastries, or our granola served with cheese. We offer brunch all week long, where you can compose your own menu with a savory dish and a sweet dish. Among other options, you'll find Eggs Benedict, avocado toast, pancakes, granola... You can also have lunch at Anémone with our savory dishes: avocado toast, buckwheat pancakes, Eggs Benedict...",
+        "textBrunch": "For breakfast, we offer a variety of high-quality hot drinks, as well as freshly squeezed seasonal juices. Also available are our cakes and other pastries, or our granola served with cheese. We offer brunch all week long, where you can compose your own menu with a savory dish and a sweet dish. ",
         "titleBoissons": "Our Drinks",
-        "textBoissons": "You can enjoy our coffees, hot and cold drinks throughout the day. At Anémone, we offer specialty coffee and real drinks made by a barista: cappuccino, flat white, latte, matcha latte, chai latte, sesame latte... For a snack, come and enjoy our homemade pastries: cookies, peanut butter brownie, banana bread...",
+        "textBoissons": "You can enjoy our coffees, hot and cold drinks throughout the day. At Anémone, we offer specialty coffee and real drinks made by a barista: cappuccino, flat white, latte, matcha latte, chai latte, sesame latte... ",
         "titleDinner": "Our Tapas",
         "textDinner": "For dinner at Anémone, it's tapas to share, dishes designed to be enjoyed with others, featuring quality products and innovative flavors. You'll also find platters, local wine, and beers.",
         "textButton": "Discover Our Menus"
