style language et ajout police

--- a/anemone_coffee/src/i18n/fr.json
+++ b/anemone_coffee/src/i18n/fr.json
@@ -85,7 +85,7 @@
 
         "footer" :{
             "titleAdress":"Adresse", 
-            "adress":"rue des carreaux",
+            "adress":"68 Rue du Général Lecler, 95320 Saint-Leu-la-Forêt",
             "contact":"Contact",
             "propos": "À propos"
 
